Possible fix for scrolling issue on iOS

--- a/styles/index.css
+++ b/styles/index.css
@@ -1271,6 +1271,10 @@ footer {
         pointer-events: none;
     }
 
+    .project-image-inner:after {
+        content: none;
+    }
+
     .btn-cross {
         align-self: center;
     }
